# MIST-Computing-Library

./: .build.sh  .gitignore  .link.sh  .protobuf_dl.sh  .travis.yml  CMakeLists.txt  LICENSE  README.md  receivetest
include/: Algorithm.hpp  LibMIST.h  MIST.h  MIST.hpp  MIST_Global.hpp  MIST_Internal.hpp  Machine.hpp  ReceiveData.hpp  RecieveData.h  RecieveData.hpp  Scheduler.hpp  SendData.h  SendData.hpp  Task.hpp
include/networking/: MistAssert.hpp  Receive.hpp  ReceiveData.hpp  Send.hpp  SendData.hpp
include/shared_variable/: SharedBool.hpp  SharedDouble.hpp  SharedInt.hpp  SharedString.hpp  SharedVariableBase.hpp
protobuf_files/: MIST.pb.cc  MIST.pb.h  MIST.proto
src/: MIST.cpp  ReceiveExample.cpp  SendExample.cpp  SendReceiveExample.cpp  SoloExample.cpp
